src/lib/snapshots/hemlis_lib__parser__tests__simple_import.snap
---
source: src/lib/parser.rs
expression: "p_import(\"import A as A\")"
---
9 of 9
===
Module
 Header
  MName
   (0, 7)->(0, 13)
  NULL
   ImportDecl
    (2, 0)->(2, 6)
    MName
     (2, 7)->(2, 8)
    NULL
    MName
     (2, 12)->(2, 13)
    (2, 12)->(2, 13)
  (0, 0)->(0, 6)
  (0, 14)->(0, 19)
  (0, 0)->(0, 0)
  (0, 0)->(0, 0)
===
