src/lib/snapshots/hemlis_lib__parser__tests__typ_app.snap
---
source: src/lib/parser.rs
expression: "p_typ(\"X.Z (A (B.C D)) E\")"
---
18 of 18
===
Module
 Header
  MName
   (0, 7)->(0, 10)
  NULL
  (0, 0)->(0, 6)
  (0, 11)->(0, 16)
  (0, 0)->(0, 0)
  (0, 0)->(0, 0)
  Decl::Sig
   Name
    (2, 0)->(2, 1)
   Typ::App
    Typ::App
     Typ::Constructor
      QProperName
       Qual
        (2, 5)->(2, 6)
       ProperName
        (2, 7)->(2, 8)
     Typ::Paren
      (2, 9)->(2, 10)
      Typ::App
       Typ::Constructor
        QProperName
         NULL
         ProperName
          (2, 10)->(2, 11)
       Typ::Paren
        (2, 12)->(2, 13)
        Typ::App
         Typ::Constructor
          QProperName
           Qual
            (2, 13)->(2, 14)
           ProperName
            (2, 15)->(2, 16)
         Typ::Constructor
          QProperName
           NULL
           ProperName
            (2, 17)->(2, 18)
        (2, 18)->(2, 19)
      (2, 19)->(2, 20)
    Typ::Constructor
     QProperName
      NULL
      ProperName
       (2, 21)->(2, 22)
===
