src/lib/snapshots/hemlis_lib__parser__tests__typ_b_simple_signature.snap
---
source: src/lib/parser.rs
expression: "p_typ(\"Foo => Bar => b -> b\")"
---
14 of 14
===
Module
 Header
  MName
   (0, 7)->(0, 10)
  NULL
  (0, 0)->(0, 6)
  (0, 11)->(0, 16)
  (0, 0)->(0, 0)
  (0, 0)->(0, 0)
  Decl::Sig
   Name
    (2, 0)->(2, 1)
   Typ::Constrained
    Constraint
     QProperName
      NULL
      ProperName
       (2, 5)->(2, 8)
    Typ::Constrained
     Constraint
      QProperName
       NULL
       ProperName
        (2, 12)->(2, 15)
     Typ::Arr
      Typ::Var
       Name
        (2, 19)->(2, 20)
      Typ::Var
       Name
        (2, 24)->(2, 25)
===
