src/lib/snapshots/hemlis_lib__parser__tests__typ_c_signature.snap
---
source: src/lib/parser.rs
expression: "p_typ(\"\n     forall out pkA pkB propsB rowB propsA rowA select\n   . GetPk (C pkA N) propsA\n  => ReflectArray pkA\n  => HasMagicMapping rowA rowA\n  => AllColumns rowA select\n  => HasMagicSelect propsA rowA select select out\n  => GetPk (C pkB N) propsB\n  => ReflectArray pkB\n  => HasMagicMapping rowB rowB\n  => Table propsA rowA\n  -> Table propsB rowB\n  -> (Record out -> Record rowB)\n  -> Sql Unit\")"
---
76 of 76
===
Module
 Header
  MName
   (0, 7)->(0, 10)
  NULL
  (0, 0)->(0, 6)
  (0, 11)->(0, 16)
  (0, 0)->(0, 0)
  (0, 0)->(0, 0)
  Decl::Sig
   Name
    (2, 0)->(2, 1)
   Typ::Forall
     TypVarBinding
      Name
       (3, 12)->(3, 15)
      NULL
     TypVarBinding
      Name
       (3, 16)->(3, 19)
      NULL
     TypVarBinding
      Name
       (3, 20)->(3, 23)
      NULL
     TypVarBinding
      Name
       (3, 24)->(3, 30)
      NULL
     TypVarBinding
      Name
       (3, 31)->(3, 35)
      NULL
     TypVarBinding
      Name
       (3, 36)->(3, 42)
      NULL
     TypVarBinding
      Name
       (3, 43)->(3, 47)
      NULL
     TypVarBinding
      Name
       (3, 48)->(3, 54)
      NULL
    Typ::Constrained
     Constraint
      QProperName
       NULL
       ProperName
        (4, 5)->(4, 10)
       Typ::Paren
        (4, 11)->(4, 12)
        Typ::App
         Typ::App
          Typ::Constructor
           QProperName
            NULL
            ProperName
             (4, 12)->(4, 13)
          Typ::Var
           Name
            (4, 14)->(4, 17)
         Typ::Constructor
          QProperName
           NULL
           ProperName
            (4, 18)->(4, 19)
        (4, 19)->(4, 20)
       Typ::Var
        Name
         (4, 21)->(4, 27)
     Typ::Constrained
      Constraint
       QProperName
        NULL
        ProperName
         (5, 5)->(5, 17)
        Typ::Var
         Name
          (5, 18)->(5, 21)
      Typ::Constrained
       Constraint
        QProperName
         NULL
         ProperName
          (6, 5)->(6, 20)
         Typ::Var
          Name
           (6, 21)->(6, 25)
         Typ::Var
          Name
           (6, 26)->(6, 30)
       Typ::Constrained
        Constraint
         QProperName
          NULL
          ProperName
           (7, 5)->(7, 15)
          Typ::Var
           Name
            (7, 16)->(7, 20)
          Typ::Var
           Name
            (7, 21)->(7, 27)
        Typ::Constrained
         Constraint
          QProperName
           NULL
           ProperName
            (8, 5)->(8, 19)
           Typ::Var
            Name
             (8, 20)->(8, 26)
           Typ::Var
            Name
             (8, 27)->(8, 31)
           Typ::Var
            Name
             (8, 32)->(8, 38)
           Typ::Var
            Name
             (8, 39)->(8, 45)
           Typ::Var
            Name
             (8, 46)->(8, 49)
         Typ::Constrained
          Constraint
           QProperName
            NULL
            ProperName
             (9, 5)->(9, 10)
            Typ::Paren
             (9, 11)->(9, 12)
             Typ::App
              Typ::App
               Typ::Constructor
                QProperName
                 NULL
                 ProperName
                  (9, 12)->(9, 13)
               Typ::Var
                Name
                 (9, 14)->(9, 17)
              Typ::Constructor
               QProperName
                NULL
                ProperName
                 (9, 18)->(9, 19)
             (9, 19)->(9, 20)
            Typ::Var
             Name
              (9, 21)->(9, 27)
          Typ::Constrained
           Constraint
            QProperName
             NULL
             ProperName
              (10, 5)->(10, 17)
             Typ::Var
              Name
               (10, 18)->(10, 21)
           Typ::Constrained
            Constraint
             QProperName
              NULL
              ProperName
               (11, 5)->(11, 20)
              Typ::Var
               Name
                (11, 21)->(11, 25)
              Typ::Var
               Name
                (11, 26)->(11, 30)
            Typ::Arr
             Typ::App
              Typ::App
               Typ::Constructor
                QProperName
                 NULL
                 ProperName
                  (12, 5)->(12, 10)
               Typ::Var
                Name
                 (12, 11)->(12, 17)
              Typ::Var
               Name
                (12, 18)->(12, 22)
             Typ::Arr
              Typ::App
               Typ::App
                Typ::Constructor
                 QProperName
                  NULL
                  ProperName
                   (13, 5)->(13, 10)
                Typ::Var
                 Name
                  (13, 11)->(13, 17)
               Typ::Var
                Name
                 (13, 18)->(13, 22)
              Typ::Arr
               Typ::Paren
                (14, 5)->(14, 6)
                Typ::Arr
                 Typ::App
                  Typ::Constructor
                   QProperName
                    NULL
                    ProperName
                     (14, 6)->(14, 12)
                  Typ::Var
                   Name
                    (14, 13)->(14, 16)
                 Typ::App
                  Typ::Constructor
                   QProperName
                    NULL
                    ProperName
                     (14, 20)->(14, 26)
                  Typ::Var
                   Name
                    (14, 27)->(14, 31)
                (14, 31)->(14, 32)
               Typ::App
                Typ::Constructor
                 QProperName
                  NULL
                  ProperName
                   (15, 5)->(15, 8)
                Typ::Constructor
                 QProperName
                  NULL
                  ProperName
                   (15, 9)->(15, 13)
===
