src/lib/snapshots/hemlis_lib__parser__tests__typ_empty_row.snap
---
source: src/lib/parser.rs
assertion_line: 2154
expression: "p_typ(\"()\")"
snapshot_kind: text
---
9 of 9
===
Module
 Header
  MName
   (0, 7)->(0, 10)
  NULL
  (0, 0)->(0, 6)
  (0, 11)->(0, 16)
  Decl::Sig
   Name
    (2, 0)->(2, 1)
   Typ::Row
    (2, 5)->(2, 7)
     Row
      NULL
===
