src/lib/snapshots/hemlis_lib__parser__tests__typ_higher_kinded.snap
---
source: src/lib/parser.rs
expression: "p_typ(\"Foo bar biz\")"
---
10 of 10
===
Module
 Header
  MName
   (0, 7)->(0, 10)
  NULL
  (0, 0)->(0, 6)
  (0, 11)->(0, 16)
  (0, 0)->(0, 0)
  (0, 0)->(0, 0)
  Decl::Sig
   Name
    (2, 0)->(2, 1)
   Typ::App
    Typ::App
     Typ::Constructor
      QProperName
       NULL
       ProperName
        (2, 5)->(2, 8)
     Typ::Var
      Name
       (2, 9)->(2, 12)
    Typ::Var
     Name
      (2, 13)->(2, 16)
===
